# bindscrape

./: Cargo.toml  README.md
.github/workflows/: CI.yml
bindscrape/: Cargo.toml
bindscrape/src/: config.rs  emit.rs  extract.rs  lib.rs  model.rs
bindscrape/tests/: roundtrip.rs  roundtrip_multi.rs  roundtrip_posixfile.rs  roundtrip_simple.rs  roundtrip_zlib.rs
bindscrape/tests/fixtures/: simple.h
bindscrape/tests/fixtures/multi/: types.h  widget.h
bindscrape/tests/fixtures/zlib/: zlib.toml  zlib.winmd
bnd-openssl/: Cargo.toml  README.md  build.rs
bnd-openssl-gen/: Cargo.toml  openssl.toml
bnd-openssl-gen/src/: lib.rs  main.rs
bnd-openssl-gen/tests/: up_to_date.rs
bnd-openssl/src/: lib.rs
bnd-openssl/src/openssl/: mod.rs
bnd-openssl/src/openssl/bio/: mod.rs
bnd-openssl/src/openssl/bn/: mod.rs
bnd-openssl/src/openssl/crypto/: mod.rs
bnd-openssl/src/openssl/evp/: mod.rs
bnd-openssl/src/openssl/rand/: mod.rs
bnd-openssl/src/openssl/sha/: mod.rs
bnd-openssl/src/openssl/ssl/: mod.rs
bnd-openssl/src/openssl/types/: mod.rs
bnd-openssl/tests/: bio_e2e.rs  bn_e2e.rs  crypto_e2e.rs  evp_e2e.rs  rand_e2e.rs  sha_e2e.rs  ssl_e2e.rs
bnd-openssl/winmd/: bnd-openssl.winmd
bnd-posix/: Cargo.toml  README.md
bnd-posix-gen/: Cargo.toml  bnd-posix.toml
bnd-posix-gen/src/: lib.rs  main.rs
bnd-posix-gen/tests/: up_to_date.rs
bnd-posix/src/: lib.rs
bnd-posix/src/posix/: mod.rs
bnd-posix/src/posix/dirent/: mod.rs
bnd-posix/src/posix/mmap/: mod.rs
bnd-posix/src/posix/stdio/: mod.rs
bnd-posix/src/posix/unistd/: mod.rs
bnd-posix/tests/: dirent_e2e.rs  dl_e2e.rs  errno_e2e.rs  inet_e2e.rs  mmap_e2e.rs  netdb_e2e.rs  posixfile_e2e.rs  pthread_e2e.rs  sched_e2e.rs  signal_e2e.rs  socket_e2e.rs  stat_e2e.rs  stdio_e2e.rs  time_e2e.rs
bnd-posix/winmd/: bnd-posix.winmd
bnd-winmd/: Cargo.toml  README.md
bnd-winmd/src/: config.rs  extract.rs  lib.rs
bnd-winmd/tests/: roundtrip_multi.rs  roundtrip_openssl.rs  roundtrip_posixfile.rs  roundtrip_simple.rs  roundtrip_zlib.rs
bns-posix/: Cargo.toml
bns-posix-gen/: Cargo.toml
bns-posix-gen/src/: lib.rs  main.rs
bns-posix/src/: lib.rs
bns-posix/src/PosixFile/: mod.rs
bns-posix/src/PosixFile/Fcntl/: mod.rs
bns-posix/src/posix/: mod.rs
bns-posix/src/posix/fcntl/: mod.rs
bns-posix/src/posix/inet/: mod.rs
bns-posix/src/posix/netdb/: mod.rs
bns-posix/src/posix/signal/: mod.rs
bns-posix/src/posix/socket/: mod.rs
bns-posix/src/posix/stat/: mod.rs
bns-posix/tests/: posixfile_e2e.rs  signal_e2e.rs
docs/: WIP.md
docs/bugs/: element-type-array-mismatch.md
docs/design/: Background.md  BndPosix.md  BnsPosix.md  CSharpGenerator.md  CrossWinmdReferences.md  RustGenerator.md  SysTesting.md  Testing.md
docs/design/systesting/: FileApis.md  Openssl.md  Sockets.md  Zlib.md  bnd-posix.md  bns-posix.md
docs/guide/: AuthoringBindings.md  ContributingBindings.md
tests/e2e-multi/: Cargo.toml  build.rs
tests/e2e-multi/src/: bindings.rs  lib.rs
tests/e2e-simple/: Cargo.toml
tests/e2e-test/: Cargo.toml  build.rs
tests/e2e-test/src/: bindings.rs  lib.rs
tests/e2e-zlib/: Cargo.toml  build.rs
tests/e2e-zlib/src/: bindings.rs
tests/simple-impl/: Cargo.toml
tests/simple-impl/src/: lib.rs
(+4 files in other folders)
