[package]
name = "bindscrape"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "bindscrape"
path = "src/lib.rs"

[[bin]]
name = "bindscrape"
path = "src/bin/bindscrape.rs"

[dependencies]
anyhow = "1"
clang = { version = "2", features = ["clang_10_0"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows-metadata = "0.59"
