[package]
name = "bnd-openssl"
version = "0.0.1"
edition.workspace = true
description = "Rust FFI bindings for OpenSSL (libssl + libcrypto)"
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
bnd-posix = { path = "../bnd-posix", features = ["time", "stdio", "pthread", "types"] }
windows-link.workspace = true

[features]
default = ["bio", "bn", "crypto", "evp", "rand", "sha", "ssl", "types"]
Foundation = []
# generated features
bio = ["Foundation"]
bn = ["Foundation"]
crypto = ["Foundation"]
evp = ["Foundation"]
rand = ["Foundation"]
sha = ["Foundation"]
ssl = ["Foundation"]
types = ["Foundation"]
