[package]
name = "bns-posix"
version = "0.1.0"
edition.workspace = true
description = "POSIX system bindings generated as WinMD metadata"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
windows-link = "0.2"

[features]
default = ["Dirent", "Fcntl", "Mmap", "Stat", "Unistd"]
Foundation = []
# generated features
Dirent = ["Foundation"]
Fcntl = ["Foundation"]
Mmap = ["Foundation"]
Stat = ["Foundation"]
Unistd = ["Foundation"]
